--- a/package.json
+++ b/package.json
@@ -23,11 +23,9 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^15.5.2",
-    "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/typography": "^0.5.16",
+    "@tailwindcss/postcss": "^4.1.12",
     "@types/node": "^24.3.0",
     "@types/react": "^19.1.12",
-    "@types/tailwindcss": "^3.1.0",
     "@types/webpack-env": "^1.18.8",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
     "@typescript-eslint/parser": "^8.41.0",
