--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "next": "^15.5.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "ts-pattern": "^5.8.0"
-  },
-  "devDependencies": {
+    "ts-pattern": "^5.8.0",
     "@next/eslint-plugin-next": "^15.5.2",
     "@tailwindcss/postcss": "^4.1.12",
     "@types/node": "^24.3.0",
@@ -55,6 +53,9 @@
     "stylelint-prettier": "^5.0.3",
     "tailwindcss": "^4.1.12",
     "typescript": "5.9.2"
+  },
+  "devDependencies": {
+
   },
   "resolutions": {
     "autoprefixer": "10.4.21"
