--- a/package.json
+++ b/package.json
@@ -14,12 +14,6 @@
   "dependencies": {
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
-    "autoprefixer": "10.4.21",
-    "classnames": "^2.5.1",
-    "next": "^15.5.2",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "ts-pattern": "^5.8.0",
     "@next/eslint-plugin-next": "^15.5.2",
     "@tailwindcss/postcss": "^4.1.12",
     "@types/node": "^24.3.0",
@@ -27,6 +21,8 @@
     "@types/webpack-env": "^1.18.8",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
     "@typescript-eslint/parser": "^8.41.0",
+    "autoprefixer": "10.4.21",
+    "classnames": "^2.5.1",
     "cssnano": "^7.1.1",
     "eslint": "^9.34.0",
     "eslint-config-next": "^15.5.2",
@@ -41,10 +37,13 @@
     "eslint-plugin-react-native": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-sort-keys-fix": "^1.1.2",
+    "next": "^15.5.2",
     "postcss": "^8.5.6",
     "postcss-preset-env": "^10.3.1",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "sass": "^1.91.0",
     "sort-package-json": "^3.4.0",
     "stylelint": "^16.23.1",
@@ -52,11 +51,10 @@
     "stylelint-order": "^7.0.0",
     "stylelint-prettier": "^5.0.3",
     "tailwindcss": "^4.1.12",
+    "ts-pattern": "^5.8.0",
     "typescript": "5.9.2"
   },
-  "devDependencies": {
-
-  },
+  "devDependencies": {},
   "resolutions": {
     "autoprefixer": "10.4.21"
   }
